--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
 	ci = commit
   cm = commit -am
 	br = branch
+  review = merge --no-ff --no-commit 
 	hist = log --pretty=format:%h %ad | %s%d [%an] --graph --date=short
 	type = cat-file -t
 	dump = cat-file -p
