--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,10 @@ bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
 bind-key p paste-buffer
 
+# hide and show current pane
+bind-key ! break-pane -d -n _hidden_pane
+bind-key @ join-pane -s $.1
+
 # Fix issue with incorrect Vim colors
 set -g default-terminal "xterm-256color"
 
