--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -364,7 +364,7 @@ cursor:
     #   - ▇ Block
     #   - _ Underline
     #   - | Beam
-    shape: Beam
+    shape: Block
 
     # Cursor blinking state
     #
