--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,9 @@ set -g base-index 1
 # start pane number from 1 similar to windows
 set -g pane-base-index 1
 
+# set color for the active tab
+set-window-option -g window-status-current-style bg=darkgreen
+
 # Make the current window the first window
 bind T swap-window -t 1
 
@@ -38,7 +41,7 @@ set -g default-terminal "xterm-256color"
 set -g status-style fg=default,bg=default
 
 # Status bar
-set-option -g status-position top
+set-option -g status-position bottom
 # set -g status-justify left           # center window list for clarity
 
 # Smart pane switching with awareness of Vim splits.
