use plugins for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,13 @@
+# List of plugins:
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour 'macchiato' # or frappe, macchiato, mocha, latte
+set -g @catppuccin_window_tabs_enabled off
+set -g @catppuccin_date_time "%H:%M"
+set -g @catppuccin_left_separator "█"
+set -g @catppuccin_right_separator "█"
+
+
+# turn mouse on
 set -g mouse on
 
 # Set scrollback history to 10000 (10k)
@@ -14,6 +24,9 @@ set -g pane-base-index 1
 
 # set color for the active tab
 set-window-option -g window-status-current-style bg=darkgreen
+
+# improve colors
+set-option -sa terminal-overrides ",xterm*:Tc"
 
 # Make the current window the first window
 bind T swap-window -t 1
@@ -41,6 +54,7 @@ set -g default-terminal "xterm-256color"
 set -g status-style fg=default,bg=default
 
 # Status bar
+# set-option -g status-position top
 set-option -g status-position bottom
 # set -g status-justify left           # center window list for clarity
 
@@ -69,3 +83,6 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
