show document symbols in the neo-tree

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,7 +26,10 @@ set -g pane-base-index 1
 set-window-option -g window-status-current-style bg=darkgreen
 
 # improve colors
-set-option -sa terminal-overrides ",xterm*:Tc"
+set -g default-terminal 'tmux-256color'
+
+# Enable 24 bit true colors
+set -ga terminal-overrides ',*:Tc'
 
 # Make the current window the first window
 bind T swap-window -t 1
