--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -106,7 +106,7 @@ font:
   # Normal (roman) font face
   normal:
     # Font family
-    family: FiraCode Nerd Font
+    family: FiraMono Nerd Font
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
