--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,12 @@
 # List of plugins:
 set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @catppuccin_flavour 'macchiato' # or frappe, macchiato, mocha, latte
 set -g @catppuccin_window_tabs_enabled off
-set -g @catppuccin_date_time "%H:%M"
-set -g @catppuccin_left_separator "█"
-set -g @catppuccin_right_separator "█"
+set -g @catppuccin_date_time_text "%H:%M"
+set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_status_right_separator "█"
+set -g @catppuccin_status_modules_right "application session cpu date_time"
 
 
 # turn mouse on
