--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,10 +3,11 @@ set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @catppuccin_flavour 'macchiato' # or frappe, macchiato, mocha, latte
 set -g @catppuccin_window_tabs_enabled off
+set -g @catppuccin_window_status_enable "yes"
 set -g @catppuccin_date_time_text "%H:%M"
 set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_right_separator "█"
-set -g @catppuccin_status_modules_right "application session cpu date_time"
+set -g @catppuccin_status_modules_right "prefix application session cpu date_time"
 
 # set the secondary prefix to Ctrl+Space
 set -g prefix2 C-Space
@@ -35,6 +36,15 @@ set -g default-terminal 'tmux-256color'
 
 # Enable 24 bit true colors
 set -ga terminal-overrides ',*:Tc'
+
+# Turn off key for:  Suspend the current client
+unbind C-z 
+
+# Reload config
+bind r source-file ~/.tmux.conf \; display "Reloaded tmux.conf"
+
+# Switch panes in full size mode
+bind -r "'" select-pane -t .+1 \;  resize-pane -Z
 
 # Make the current window the first window
 bind T swap-window -t 1
