add hot-keys to switch panes and windows in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,6 +45,10 @@ bind r source-file ~/.tmux.conf \; display "Reloaded tmux.conf"
 
 # Switch panes in full size mode
 bind -r "'" select-pane -t .+1 \;  resize-pane -Z
+bind -n F11 select-pane -t .+1 \;  resize-pane -Z
+
+# Switch to the next window
+bind-key -n F10 next-window
 
 # Make the current window the first window
 bind T swap-window -t 1
