--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -106,7 +106,8 @@ font:
   # Normal (roman) font face
   normal:
     # Font family
-    family: FiraCode Nerd Font
+    # family: FiraCode Nerd Font
+    family: JetBrainsMono Nerd Font
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -145,7 +146,7 @@ font:
     #style: Bold Italic
 
   # Point size
-  size: 13.5
+  size: 14
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
