--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # List of plugins:
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @catppuccin_flavour 'macchiato' # or frappe, macchiato, mocha, latte
+set -g @catppuccin_flavour $CATPPUCCIN # or frappe, macchiato, mocha, latte
 set -g @catppuccin_window_tabs_enabled off
 set -g @catppuccin_window_status_enable "yes"
 set -g @catppuccin_date_time_text "%H:%M"
