--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -10,10 +10,24 @@
   "ui_font_size": 16,
   "buffer_font_size": 16,
   "autosave": "on_focus_change",
+  "restore_on_startup": "none",
+  "git": {
+    "inline_blame": {
+      "enabled": false
+    }
+  },
   "theme": {
     "mode": "system",
     "light": "One Light",
     "dark": "One Light"
+  },
+  "auto_fold_dirs": true,
+  // Settings related to the editor's tabs
+  "tabs": {
+    // Show git status colors in the editor tabs.
+    "git_status": true,
+    // Whether to show the file icon for a tab.
+    "file_icons": true
   },
   "vim_mode": true,
   "vim": {
