--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,8 +10,8 @@ set -g @catppuccin_status_right_separator "█"
 set -g @catppuccin_status_modules_right "prefix application session cpu date_time"
 
 # set the secondary prefix to Ctrl+Space
-set -g prefix2 C-Space
-bind C-Space send-prefix -2
+# set -g prefix2 C-Space
+# bind C-Space send-prefix -2
 
 # turn mouse on
 set -g mouse on
