--- a/.nethackrc
+++ b/.nethackrc
@@ -2,7 +2,7 @@
 # nethack -u Vasian-mon-dwa
 OPTIONS=gender:male,pettype:dog,dogname:Ralph,catname:Foxy
 OPTIONS=!autoquiver,autopickup,pickup_types:?!/$="
-#AUTOPICKUP_EXCEPTION="<.*arrow"
+# AUTOPICKUP_EXCEPTION="<.*arrow"
 AUTOPICKUP_EXCEPTION=">.*corpse"
 AUTOPICKUP_EXCEPTION=">.* cursed.*"
 AUTOPICKUP_EXCEPTION="> named empty"
@@ -152,3 +152,182 @@ MSGTYPE=hide "You swap places with your .*"
 #     │·.···│   │·+·····│  
 #     │>·│··│   └─┤·····│  
 #     └──┴──┘     └─────┘  
+# Level 1
+#┌─┬────┐ ┌────┐
+#│<│>·@·└─┘····│
+#│^├┐·12····!··│
+#│^││··00│·0·0·│
+#│^││····│·····│
+#│^│└───┬┘3────┤
+#│^│    │······│
+#│^└────┘······│
+#│··^^^^0465···│
+#│··┌───┐······│
+#└──┘   └──────┘
+#┌─┬────┐ ┌────┐
+#│<│>·@·└─┘····│
+#│^├┐·..···2.··│
+#│^││·100│·0!0·│
+#│^││····│·····│
+#│^│└───┬┘.────┤
+#│^│    │······│
+#│^└────┘435···│
+#│··^^^.....6··│
+#│··┌───┐······│
+#└──┘   └──────┘
+#
+#Level 1
+#┌────┐  ┌───┐ 
+#│····│  │···│ 
+#│·0··└──┘·0·│ 
+#│·0······1··│ 
+#│··┌─┐@┌─┐2·│ 
+#├──┴─┴─┼─┘·─┴┐
+#│··^^^<│·····│
+#│··┌───┤0····│
+#└┐^│   │·4···│
+# │^└───┘·3···│
+# │··^^^^0·0··│
+# │··┌────────┘
+# └──┘          
+#┌────┐  ┌───┐ 
+#│····│  │···│ 
+#│·0··└──┘·0·│ 
+#│·0······.·1│ 
+#│··┌─┐@┌─┐.·│ 
+#├──┴─┴─┼─┘·─┴┐
+#│··^^^<│·····│
+#│··┌───┤0·2··│
+#└┐^│   │·.···│
+# │^└───┘3.···│
+# │··^^...4.··│
+# │··┌────────┘
+# └──┘          
+# Level 2
+#┌────┬────┐       ┌─────────┐
+#│····│··.·└─┐     │·········│
+#│··00│00··.@│     │·········│
+#│·····1···┌─┘     │·········│
+#│····│····│       │····<····│
+#├─·──┼────┴┐      │·········│
+#│··0·│·····│      │·········│
+#│·00·│0·0·0│      │·········│
+#│··0·····4·│      │·········│
+#│·002│0··3·└──────┴────────+┤
+#│····│··0·0·^^^^^^^^^^^^^^^·│
+#└────┴──────────────────────┘
+#┌────┬────┐       ┌─────────┐
+#│····│··.·└─┐     │·········│
+#│··00│00··.@│     │·········│
+#│···1·.···┌─┘     │·········│
+#│····│····│       │····<····│
+#├─·──┼────┴┐      │·········│
+#│··0·│·····│      │·········│
+#│·002│0·040│      │·········│
+#│··0·····.·│      │·········│
+#│·00.│0··.3└──────┴────────+┤
+#│····│··x·x·..^^^^^^^^^^^^^·│
+#└────┴──────────────────────┘
+#┌────┬────┐       ┌─────────┐
+#│····│··.·└─┐     │·········│
+#│··00│00··.@│     │·········│
+#│···1·.···┌─┘     │·········│
+#│····│····│       │····<····│
+#├─·──┼────┴┐      │·········│
+#│··0·│·····│      │·········│
+#│·002│0·xxx│      │·········│
+#│··x·····.·│      │·········│
+#│·xx.│0··.x└──────┴────────+┤
+#│····│··.·.·......^^^^^^^^^·│
+#└────┴──────────────────────┘
+# Level 3
+#  ┌─┬────┐          
+#┌─┘·│····│          
+#│···0····├─┬───────┐
+#│·─·00─00│·│·······│
+#│·00─······│·······│
+#│·─··0·│···│·······│
+#│····─0└─0─┤···<···│
+#│··02··0···│·······│
+#│·──···│···│·······│
+#│····─0├───┤·······│
+#└─┐··1·└───┴──────+┤
+#  │··0@^^%^^^^^^^^·│
+#  └────────────────┘
+#  ┌─┬────┐          
+#┌─┘·│····│          
+#│···0····├─┬───────┐
+#│·─·00─00│·│·······│
+#│·00─······│·······│
+#│·─··0·│···│·······│
+#│····─0└─0─┤···<···│
+#│··0.··0···│·······│
+#│·──2··│···│·······│
+#│····─x├───┤·······│
+#└─┐1·.·└───┴──────+┤
+#  │··x@..^^^^^^^^^·│
+#  └────────────────┘
+# Phase 2
+#  ┌─┬────┐          
+#┌─┘·│····│          
+#│···3····├─┬───────┐
+#│·─·00─00│·│·······│
+#│@··─······│·······│
+#│·─··0·│···│·······│
+#│····─2└─0─┤···<···│
+#│······1···│·······│
+#│·──···│···│·······│
+#│····─·├───┤·······│
+#└─┐····└───┴──────+┤
+#  │···>·······^^^^·│
+#  └────────────────┘
+#  ┌─┬────┐          
+#┌─┘·│····│          
+#│···.·3··├─┬───────┐
+#│·─·xx─00│·│·······│
+#│@··─·2····│·······│
+#│·─··x·│···│·······│
+#│····─.└─0─┤···<···│
+#│······.·1·│·······│
+#│·──···│···│·······│
+#│····─·├───┤·······│
+#└─┐····└───┴──────+┤
+#  │···>·······^^^^·│
+#  └────────────────┘
+# Level 3
+#┌────────────────────────┐
+#│@······^^^^^%^^^^^^^^^^·│
+#│.······┌──────────────┐·│
+#└┬─────·└────┐         │·│
+# │···········│         │·│
+# │·0·0·0·7·0·│         │·│
+#┌┴──────·────┤         │·│
+#│···1·5··6·0·│         │·│
+#│···2········│         │·│
+#└┬───·──────┬┘   ┌─────┤·│
+# │··3·0·0···│  ┌─┤·····│·│
+# │·····0····│  │·+·····│·│
+# │·0·0···0·┌┘  ├─┤·····│·│
+#┌┴─────·─┬─┘   │·+·····+·│
+#│··0·····│     ├─┤·····├─┘
+#│········│     │·+·····│  
+#│···┌────┘     └─┤·····│  
+#└───┘            └─────┘ 
+#┌────────────────────────┐
+#│@······^^^^^%^^^^^^^^^^·│
+#│.······┌──────────────┐·│
+#└┬─────·└────┐         │·│
+# │···········│         │·│
+# │·0·0·0·.·0·│         │·│
+#┌┴──────·────┤         │·│
+#│·1·5..6·.·0·│         │·│
+#│···.7·······│         │·│
+#└┬───·──────┬┘   ┌─────┤·│
+# │·3.·0·0···│  ┌─┤·····│·│
+# │···2·0····│  │·+·····│·│
+# │·0·0···0·┌┘  ├─┤·····│·│
+#┌┴─────·─┬─┘   │·+·····+·│
+#│··0·····│     ├─┤·····├─┘
+#│········│     │·+·····│  
+#│···┌────┘     └─┤·····│  
+#└───┘            └─────┘ 
