--- a/.nethackrc
+++ b/.nethackrc
@@ -1,6 +1,8 @@
 # nethack -u Uruk-bar-orc
 # nethack -u Vasian-mon-dwa
-OPTIONS=gender:male,pettype:dog,dogname:Ralph,catname:Foxy
+OPTIONS=gender:male
+OPTIONS=!bones
+# OPTIONS=pettype:dog,dogname:Ralph,catname:Foxy
 OPTIONS=!autoquiver,autopickup,pickup_types:?!/$="+
 # AUTOPICKUP_EXCEPTION="<.*arrow"
 AUTOPICKUP_EXCEPTION=">.*corpse"
@@ -45,7 +47,7 @@ SYMBOLS=S_lava:~
 ## Colored status
 # ============================================================
 #
-OPTION=statushilites:3
+OPTION=statushilites:5
 # Str, Con, Dex, Int, Wis, Cha
 OPTIONS=hilite_status:characteristics/up/green/down/red
 OPTION=hilite_status:experience/always/magenta
@@ -141,223 +143,11 @@ MSGTYPE=hide "You swap places with your .*"
 # The <unicorn/horse> neighs.
 #    As above while they are low on tameness, or else are not tame.
 #
-# ============================================================
-#
-## Sokoban
-#
-# ============================================================
-#
-## Level ?                         
-#  ┌──────────────────────┐
-#  │··^^^^^^^^^^^^^^^^^^··│
-#  │··┌─────────────────┐·│
-#┌─┴┐·│    ┌───┐        │·│
-#│··│0└┐  ┌┘···│        │·│
-#│·····├──┤·0··│        │·│
-#│·!0··│··│··2·│        │·│
-#└┐··76│···43·┌┘        │·│
-# │0··5···│0··│   ┌─────┤·│
-# │·00·│··│··0│ ┌─┤·····│·│
-# │·0·8└──┤·0·│ │·+·····│·│
-# │·······│··┌┘ ├─┤·····│·│
-# └──┐·0··│·┌┘  │·+·····+·│
-#    └┬─·─┘·│   ├─┤·····├─┘
-#     │·1···│   │·+·····│  
-#     │>·│··│   └─┤·····│  
-#     └──┴──┘     └─────┘  
-#  ┌──────────────────────┐
-#  │··^^^^^^^^^^^^^^^^^^··│
-#  │··┌─────────────────┐·│
-#┌─┴┐·│    ┌───┐        │·│
-#│··│.└┐  ┌┘···│        │·│
-#│·····├──┤·02·│        │·│
-#│·!0·6│··│·3.·│        │·│
-#└┐·7..│4··..·┌┘        │·│
-# │0·5.···│0··│   ┌─────┤·│
-# │·00·│··│··0│ ┌─┤·····│·│
-# │·0·.└──┤·0·│ │·+·····│·│
-# │···8···│··┌┘ ├─┤·····│·│
-# └──┐·0··│·┌┘  │·+·····+·│
-#    └┬─1─┘·│   ├─┤·····├─┘
-#     │·.···│   │·+·····│  
-#     │>·│··│   └─┤·····│  
-#     └──┴──┘     └─────┘  
-# Level 1
-#┌─┬────┐ ┌────┐
-#│<│>·@·└─┘····│
-#│^├┐·12····!··│
-#│^││··00│·0·0·│
-#│^││····│·····│
-#│^│└───┬┘3────┤
-#│^│    │······│
-#│^└────┘······│
-#│··^^^^0465···│
-#│··┌───┐······│
-#└──┘   └──────┘
-#┌─┬────┐ ┌────┐
-#│<│>·@·└─┘····│
-#│^├┐·..···2.··│
-#│^││·100│·0!0·│
-#│^││····│·····│
-#│^│└───┬┘.────┤
-#│^│    │······│
-#│^└────┘435···│
-#│··^^^.....6··│
-#│··┌───┐······│
-#└──┘   └──────┘
-#
-#Level 1
-#┌────┐  ┌───┐ 
-#│····│  │···│ 
-#│·0··└──┘·0·│ 
-#│·0······1··│ 
-#│··┌─┐@┌─┐2·│ 
-#├──┴─┴─┼─┘·─┴┐
-#│··^^^<│·····│
-#│··┌───┤0····│
-#└┐^│   │·4···│
-# │^└───┘·3···│
-# │··^^^^0·0··│
-# │··┌────────┘
-# └──┘          
-#┌────┐  ┌───┐ 
-#│····│  │···│ 
-#│·0··└──┘·0·│ 
-#│·0······.·1│ 
-#│··┌─┐@┌─┐.·│ 
-#├──┴─┴─┼─┘·─┴┐
-#│··^^^<│·····│
-#│··┌───┤0·2··│
-#└┐^│   │·.···│
-# │^└───┘3.···│
-# │··^^...4.··│
-# │··┌────────┘
-# └──┘          
-# Level 2
-#┌────┬────┐       ┌─────────┐
-#│····│··.·└─┐     │·········│
-#│··00│00··.@│     │·········│
-#│·····1···┌─┘     │·········│
-#│····│····│       │····<····│
-#├─·──┼────┴┐      │·········│
-#│··0·│·····│      │·········│
-#│·00·│0·0·0│      │·········│
-#│··0·····4·│      │·········│
-#│·002│0··3·└──────┴────────+┤
-#│····│··0·0·^^^^^^^^^^^^^^^·│
-#└────┴──────────────────────┘
-#┌────┬────┐       ┌─────────┐
-#│····│··.·└─┐     │·········│
-#│··00│00··.@│     │·········│
-#│···1·.···┌─┘     │·········│
-#│····│····│       │····<····│
-#├─·──┼────┴┐      │·········│
-#│··0·│·····│      │·········│
-#│·002│0·040│      │·········│
-#│··0·····.·│      │·········│
-#│·00.│0··.3└──────┴────────+┤
-#│····│··x·x·..^^^^^^^^^^^^^·│
-#└────┴──────────────────────┘
-#┌────┬────┐       ┌─────────┐
-#│····│··.·└─┐     │·········│
-#│··00│00··.@│     │·········│
-#│···1·.···┌─┘     │·········│
-#│····│····│       │····<····│
-#├─·──┼────┴┐      │·········│
-#│··0·│·····│      │·········│
-#│·002│0·xxx│      │·········│
-#│··x·····.·│      │·········│
-#│·xx.│0··.x└──────┴────────+┤
-#│····│··.·.·......^^^^^^^^^·│
-#└────┴──────────────────────┘
-# Level 3
-#  ┌─┬────┐          
-#┌─┘·│····│          
-#│···0····├─┬───────┐
-#│·─·00─00│·│·······│
-#│·00─······│·······│
-#│·─··0·│···│·······│
-#│····─0└─0─┤···<···│
-#│··02··0···│·······│
-#│·──···│···│·······│
-#│····─0├───┤·······│
-#└─┐··1·└───┴──────+┤
-#  │··0@^^%^^^^^^^^·│
-#  └────────────────┘
-#  ┌─┬────┐          
-#┌─┘·│····│          
-#│···0····├─┬───────┐
-#│·─·00─00│·│·······│
-#│·00─······│·······│
-#│·─··0·│···│·······│
-#│····─0└─0─┤···<···│
-#│··0.··0···│·······│
-#│·──2··│···│·······│
-#│····─x├───┤·······│
-#└─┐1·.·└───┴──────+┤
-#  │··x@..^^^^^^^^^·│
-#  └────────────────┘
-# Phase 2
-#  ┌─┬────┐          
-#┌─┘·│····│          
-#│···3····├─┬───────┐
-#│·─·00─00│·│·······│
-#│@··─······│·······│
-#│·─··0·│···│·······│
-#│····─2└─0─┤···<···│
-#│······1···│·······│
-#│·──···│···│·······│
-#│····─·├───┤·······│
-#└─┐····└───┴──────+┤
-#  │···>·······^^^^·│
-#  └────────────────┘
-#  ┌─┬────┐          
-#┌─┘·│····│          
-#│···.·3··├─┬───────┐
-#│·─·xx─00│·│·······│
-#│@··─·2····│·······│
-#│·─··x·│···│·······│
-#│····─.└─0─┤···<···│
-#│······.·1·│·······│
-#│·──···│···│·······│
-#│····─·├───┤·······│
-#└─┐····└───┴──────+┤
-#  │···>·······^^^^·│
-#  └────────────────┘
-# Level 3
-#┌────────────────────────┐
-#│@······^^^^^%^^^^^^^^^^·│
-#│.······┌──────────────┐·│
-#└┬─────·└────┐         │·│
-# │···········│         │·│
-# │·0·0·0·7·0·│         │·│
-#┌┴──────·────┤         │·│
-#│···1·5··6·0·│         │·│
-#│···2········│         │·│
-#└┬───·──────┬┘   ┌─────┤·│
-# │··3·0·0···│  ┌─┤·····│·│
-# │·····0····│  │·+·····│·│
-# │·0·0···0·┌┘  ├─┤·····│·│
-#┌┴─────·─┬─┘   │·+·····+·│
-#│··0·····│     ├─┤·····├─┘
-#│········│     │·+·····│  
-#│···┌────┘     └─┤·····│  
-#└───┘            └─────┘ 
-#┌────────────────────────┐
-#│@······^^^^^%^^^^^^^^^^·│
-#│.······┌──────────────┐·│
-#└┬─────·└────┐         │·│
-# │···········│         │·│
-# │·0·0·0·.·0·│         │·│
-#┌┴──────·────┤         │·│
-#│·1·5..6·.·0·│         │·│
-#│···.7·······│         │·│
-#└┬───·──────┬┘   ┌─────┤·│
-# │·3.·0·0···│  ┌─┤·····│·│
-# │···2·0····│  │·+·····│·│
-# │·0·0···0·┌┘  ├─┤·····│·│
-#┌┴─────·─┬─┘   │·+·····+·│
-#│··0·····│     ├─┤·····├─┘
-#│········│     │·+·····│  
-#│···┌────┘     └─┤·····│  
-#└───┘            └─────┘ 
+# Wishes:
+# *    "blessed greased +2 gray dragon scale mail" (or +3) provides magic resistance, and
+# *    "blessed greased +2 silver dragon scale mail" (or +3) provides reflection.
+# *    "2 blessed scrolls of charging"
+# *    "blessed magic marker"
+# *    "blessed oilskin sack"
+# *    "blessed greased fireproof +2 cloak of displacement"
+# *    "blessed greased fireproof +2 elven leather helm"
