Add tmux_mode indicator

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -3,7 +3,7 @@ title = " "
 # fullscreen = true
 font-family = "JetBrainsMono Nerd Font" 
 font-size = 16
-font-feature = -calt -liga -dlig
+font-feature = -calt
 theme = dark:catppuccin-macchiato,light:catppuccin-latte
 window-theme = dark
 window-save-state = always
