--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,32 @@
 # List of plugins:
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+
+# prompt to display when tmux prefix key is pressed
+set -g @mode_indicator_prefix_prompt ' 󰘲 '
+# prompt to display when tmux is in copy mode
+set -g @mode_indicator_copy_prompt '  '
+# prompt to display when tmux has synchronized panes
+set -g @mode_indicator_sync_prompt ' SYNC '
+# prompt to display when tmux is in normal mode
+set -g @mode_indicator_empty_prompt ' '
+# style values for empty prompt
+set -g @mode_indicator_empty_mode_style 'bg=blue,fg=black'
+# style values for prefix prompt
+set -g @mode_indicator_prefix_mode_style 'bg=cyan,fg=black'
+# style values for copy prompt
+set -g @mode_indicator_copy_mode_style 'bg=yellow,fg=black'
+# style values for sync prompt
+set -g @mode_indicator_sync_mode_style 'bg=red,fg=black'
+
 set -g @catppuccin_flavour $CATPPUCCIN # or frappe, macchiato, mocha, latte
 set -g @catppuccin_window_tabs_enabled off
 set -g @catppuccin_window_status_enable "yes"
 set -g @catppuccin_date_time_text "%H:%M"
 set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_right_separator "█"
-set -g @catppuccin_status_modules_right "prefix application session cpu date_time"
+set -g @catppuccin_status_modules_right "application session cpu date_time tmux_mode"
 
 # set the secondary prefix to Ctrl+Space
 # set -g prefix2 C-Space
@@ -43,6 +62,9 @@ unbind C-z
 # Reload config
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux.conf"
 
+# Enter to copy-mode by Ctrl+b /
+bind-key / copy-mode \; send-key ?
+
 # Switch panes in full size mode
 bind -r "'" select-pane -t .+1 \;  resize-pane -Z
 bind -n F11 select-pane -t .+1 \;  resize-pane -Z
@@ -61,6 +83,7 @@ bind % split-window -h -c "#{pane_current_path}"
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+unbind-key -T copy-mode-vi v
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
 bind-key p paste-buffer
@@ -81,24 +104,24 @@ set-option -g status-position bottom
 # set -g status-justify left           # center window list for clarity
 
 # Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
-bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
-bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
-bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
-
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
+# # See: https://github.com/christoomey/vim-tmux-navigator
+# is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+#     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+# bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+# bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+# bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+# bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+# tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+# if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+#     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+# if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+#     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+#
+# bind-key -T copy-mode-vi 'C-h' select-pane -L
+# bind-key -T copy-mode-vi 'C-j' select-pane -D
+# bind-key -T copy-mode-vi 'C-k' select-pane -U
+# bind-key -T copy-mode-vi 'C-l' select-pane -R
+# bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 # resize panes
 bind -r H resize-pane -L 5
