map keybinds with alt for ghostty

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -11,3 +11,7 @@ window-padding-x = 3
 window-padding-y = 3
 
 copy-on-select = true
+
+keybind = alt+f=text:\x1bf
+keybind = alt+b=text:\x1bb
+keybind = alt+o=text:\x1bo
