--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,11 +26,13 @@ set -g @catppuccin_window_status_enable "yes"
 set -g @catppuccin_date_time_text "%H:%M"
 set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_right_separator "█"
-set -g @catppuccin_status_modules_right "application session cpu date_time tmux_mode"
+set -g @catppuccin_status_modules_right "prefix application session cpu date_time tmux_mode"
 
 # set the secondary prefix to Ctrl+Space
 # set -g prefix2 C-Space
 # bind C-Space send-prefix -2
+
+set-option -g detach-on-destroy off
 
 # turn mouse on
 set -g mouse on
