--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,8 @@
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # prompt to display when tmux prefix key is pressed
 set -g @mode_indicator_prefix_prompt ' 󰘲 '
@@ -10,9 +12,9 @@ set -g @mode_indicator_copy_prompt '  '
 # prompt to display when tmux has synchronized panes
 set -g @mode_indicator_sync_prompt ' SYNC '
 # prompt to display when tmux is in normal mode
-set -g @mode_indicator_empty_prompt ' '
+set -g @mode_indicator_empty_prompt '  '
 # style values for empty prompt
-set -g @mode_indicator_empty_mode_style 'bg=blue,fg=black'
+set -g @mode_indicator_empty_mode_style 'bg=black,fg=grey'
 # style values for prefix prompt
 set -g @mode_indicator_prefix_mode_style 'bg=cyan,fg=black'
 # style values for copy prompt
@@ -26,7 +28,7 @@ set -g @catppuccin_window_status_enable "yes"
 set -g @catppuccin_date_time_text "%H:%M"
 set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_right_separator "█"
-set -g @catppuccin_status_modules_right "prefix application session cpu date_time tmux_mode"
+set -g @catppuccin_status_modules_right "application session cpu date_time tmux_mode"
 
 # set the secondary prefix to Ctrl+Space
 # set -g prefix2 C-Space
@@ -34,8 +36,16 @@ set -g @catppuccin_status_modules_right "prefix application session cpu date_tim
 
 set-option -g detach-on-destroy off
 
+set -g @continuum-restore 'on'
+
 # turn mouse on
 set -g mouse on
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
 
 # Set scrollback history to 10000 (10k)
 set -g history-limit 10000
