--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,26 +1,8 @@
 # List of plugins:
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-
-# prompt to display when tmux prefix key is pressed
-set -g @mode_indicator_prefix_prompt ' 󰘲 '
-# prompt to display when tmux is in copy mode
-set -g @mode_indicator_copy_prompt '  '
-# prompt to display when tmux has synchronized panes
-set -g @mode_indicator_sync_prompt ' SYNC '
-# prompt to display when tmux is in normal mode
-set -g @mode_indicator_empty_prompt '  '
-# style values for empty prompt
-set -g @mode_indicator_empty_mode_style 'bg=black,fg=grey'
-# style values for prefix prompt
-set -g @mode_indicator_prefix_mode_style 'bg=cyan,fg=black'
-# style values for copy prompt
-set -g @mode_indicator_copy_mode_style 'bg=yellow,fg=black'
-# style values for sync prompt
-set -g @mode_indicator_sync_mode_style 'bg=red,fg=black'
 
 set -g @catppuccin_flavour $CATPPUCCIN # or frappe, macchiato, mocha, latte
 set -g @catppuccin_window_tabs_enabled off
@@ -28,7 +10,7 @@ set -g @catppuccin_window_status_enable "yes"
 set -g @catppuccin_date_time_text "%H:%M"
 set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_right_separator "█"
-set -g @catppuccin_status_modules_right "application session cpu date_time tmux_mode"
+set -g @catppuccin_status_modules_right "prefix application session cpu date_time"
 
 # set the secondary prefix to Ctrl+Space
 # set -g prefix2 C-Space
